--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
     </section>
     
     <footer id="contact">
-        <p>&copy; 2024 Glow and Tidy Crew. All rights reserved.</p>
-        <p>Email: info@glowandtidycrew.com | Phone: (02) XXXX XXXX</p>
+        <p>&copy; 2025 Glow and Tidy Crew. All rights reserved.</p>
+        <p>Email: info@glowandtidycrew.com.au | Phone: (02) XXXX XXXX</p>
         <p>Sydney West Area</p>
     </footer>
 </body>
