--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
     <header>
         <nav>
-            <h1>🧹 Glow and Tidy Crew</h1>
+            <h1>🧹</h1>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#services">Services</a></li>
@@ -137,7 +137,8 @@
     </header>
     
     <section class="hero" id="home">
-        <h2>Professional Cleaning Services for Sydney West</h2>
+        <h2>Glow and Tidy Crew</h2>
+        <h3>Professional Cleaning Services for Sydney West</h3>
         <p>Making your home spotless, one clean at a time</p>
         <a href="#contact" class="btn">Get a Free Quote</a>
     </section>
