--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <h2>Glow and Tidy Crew</h2>
         <h3>Professional Cleaning Services for Sydney West</h3>
         <p>Making your home spotless, one clean at a time</p>
-        <a href="#contact" class="btn">Get a Free Quote</a>
+        <a href="#contact" class="btn">Email or text us for a free Quote</a>
     </section>
     
     <section class="services" id="services">
