--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="service-grid">
             <div class="service-card">
                 <h3>Residential Cleaning</h3>
-                <p>Deep cleaning for homes in Parramatta, Penrith, and surrounding areas</p>
+                <p>Deep cleaning for homes in Parramatta, North West, Penrith, and surrounding areas</p>
             </div>
             <div class="service-card">
                 <h3>Office Cleaning</h3>
