--- a/index.html
+++ b/index.html
@@ -147,6 +147,20 @@
         <h2>Our Services</h2>
         <div class="service-grid">
             <div class="service-card">
+                <h3>Domestic Cleaning</h3>
+                <p>Domestic cleaning for homes in Parramatta, North West, Penrith, and surrounding areas</p>
+            </div>
+
+            <div class="service-card">
+                <h3>Office Cleaning</h3>
+                <p>Professional office and commercial space cleaning</p>
+            </div>
+            <div class="service-card">
+                <h3>Carpet Steam Cleaning</h3>
+                <p>Professional carpet and upholstery cleaning services</p>
+            </div>
+        <!--
+            <div class="service-card">
                 <h3>Residential Cleaning</h3>
                 <p>Deep cleaning for homes in Parramatta, North West, Penrith, and surrounding areas</p>
             </div>
@@ -170,12 +184,13 @@
                 <h3>Eco-Friendly Options</h3>
                 <p>Safe, environmentally conscious cleaning solutions</p>
             </div>
+        -->
         </div>
     </section>
     
     <footer id="contact">
         <p>&copy; 2025 Glow and Tidy Crew. All rights reserved.</p>
-        <p>Email: info@glowandtidycrew.com.au | Phone: (04) XXXX XXXX</p>
+        <p>Email: deepaniruhunu@gmail.com | Phone: 0451 073 760 or 0416 396 106</p>
         <p>Sydney West Area</p>
     </footer>
 </body>
